# hybrid-data-ingestion-streaming-platform

./: .env.example  README.md  README_TEMPLATE.md  README_VI.md  docker-compose.consumer.yml  docker-compose.db.yml  docker-compose.portal.yml  docker-compose.profiling.yml  docker-compose.rabbitmq.yml  docker-compose.streaming-etl.yml  note.txt
configs/: register-source-connector.json  register-staging-connector.json
database/00_source/: create_source_schema.sql
database/02_reporting/: 01_create_reporting_contract.sql
docs/: DEPLOYMENT_GUIDE.md  PROJECT_ARCHITECTURE.md  README_PORTAL.md  SYSTEM_WORKFLOW.md  WORKFLOW.excalidraw  cv_portfolio_implementation_plan.md  cv_portfolio_transition.md  dwh_redesign_plan.md  workflow.excalidraw
docs/portal/: BUSINESS_LOGIC.md  README_PORTAL.md
scripts/: dbt_scheduler.py  insert_single_test.py  verify_live_sync.py
services/cdc_consumer/: requirements.txt
services/cdc_consumer/src/: cdc_consumer.py
services/dbt_analytics/: dbt_project.yml
services/event_publisher/: requirements.txt
services/event_publisher/src/: event_publisher.py
services/mock_generator/src/: generator.py
services/portal_backend/: .env.example  main.py  requirements.txt
services/portal_backend/models/: contract_model.py
services/portal_backend/repositories/: contract_repository.py
services/portal_frontend/: index.html  nginx.conf
services/profiling/: requirements.txt
services/shared/: pyproject.toml
services/shared/shared/: __init__.py  configs.py  connections.py  query_builder.py
services/streaming_etl/: requirements.txt
(+52 files in other folders)
