[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "1.0.0"
description = "Shared OOP base package for CDC Reporting consumers"
requires-python = ">=3.11"
dependencies = [
    "kafka-python==2.0.2",
    "psycopg2-binary>=2.9.9",
    "python-dotenv==1.0.0",
    "redis==7.1.0",
    "pika==1.3.2",
]

[tool.setuptools.packages.find]
include = ["shared*"]
